# find_square

./: .gitignore  LICENSE.txt  README.md  docker-compose.dev.yaml  docker-compose.yaml  docker-compose_dev.yaml  dockerfile  pyproject.toml  requirements.txt
app/: app.py  config.py  db.py  dependencies.py  log_config.yaml  main.py  models.py  run.py
app/cv/: image_processing.py  math_processor.py  models.py
app/routers/: main_tab.py  main_window.py
gif/: gif.ipynb
helpers/gif/: gif.ipynb
helpers/test_img/: test_img.ipynb
static/css/: bootstrap-grid.min.css  bootstrap-grid.min.css.map  bootstrap-reboot.min.css  bootstrap-reboot.min.css.map  bootstrap-utilities.min.css  bootstrap-utilities.min.css.map  bootstrap.min.css  bootstrap.min.css.map  main.min.css  main.min.css.map  styles.css
static/js/: main.js  wbi.js
static/scss/: main.scss
templates/: index.html
test_img/: test_img.ipynb
