[tool.poetry]
name = "find-square"
version = "0.1.0"
description = ""
authors = ["duckfish <duckfish91@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.8.0.76"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
cachetools = "^5.3.1"
python-multipart = "^0.0.6"
jinja2 = "^3.1.2"
pyyaml = "^6.0.1"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
