[project]
name = "find-square"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11"
dependencies = [
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "motor>=3.7.0",
    "numpy<2",
    "opencv-python-headless>=4.11.0.86",
    "pydantic-settings>=2.7.1",
    "uvicorn[standard]>=0.34.0",
]
