[project]
name = "find-square"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "jinja2>=3.1.5",
    "numpy<2",
    "opencv-python-headless>=4.11.0.86",
    "psycopg2-binary>=2.9.10",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.22",
    "tensorflow-cpu==2.15",
    "uvicorn[standard]>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.ruff.lint]
select = [
    "F",
    "D",
    "UP",
    "B",
    "SIM",
    "I",
]
ignore = ["D100", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"
